# lab-devOps

./: .gitignore  CONTRIBUTING.md  README.md  print-membership.sh  system-map
scripts/monitor/hallMonitor2/: .gitignore  .pre-commit-config.yaml  .singularityignore  Makefile  README.md  Singularity.def  build.bat  build.sh  clean.bat  post-create.sh  pyproject.toml  pytest.ini  setup.py  test.sh
scripts/monitor/hallMonitor2/.devcontainer/: devcontainer.json
scripts/monitor/hallMonitor2/hallmonitor/: __main__.py  app.py  hallMonitor.py  hallmonitor.py  hmutils.py  requirements.txt  setup.py  update_tracker.py
scripts/monitor/hallMonitor2/hallmonitor/updatetracker/: update_tracker.py
scripts/monitor/hallMonitor2/tests/: conftest.py
scripts/monitor/hallMonitor2/tests/integration/: base_cases.py  eeg_cases.py  exception_cases.py  hm_test_cases.py  misc_cases.py  misplaced_cases.py  naming_cases.py  psychopy_cases.py  qa_cases.py  test_pipeline.py  tracker_cases.py
scripts/monitor/hallMonitor2/tests/unit/: test_Identifier.py  test_args.py  test_expected_files_identifiers.py  test_file_record.py  test_psychopy.py  test_unique_sub_ses.py  test_uniqueness.py  test_utils.py
scripts/monitor/hallMonitor2/updatetracker/: update_tracker.py
scripts/python/syllable-analysis/: Makefile  Singularity.def  pyproject.toml  rp1_data.csv  rp2_data-2025-04-28.csv
scripts/python/syllable-analysis/syllable_analysis/: __main__.py  scaffolds.py  timestamping.py  utils.py
scripts/python/syllable-analysis/syllable_analysis/error_analysis/: __init__.py  analyze.py
scripts/python/syllable-analysis/syllable_analysis/syllable_match/: __init__.py  feature_extractors.py  fields.py  stats.py
scripts/python/syllable-match/: pyproject.toml
scripts/python/syllable-match/syllable_match/: __main__.py  count_errors.py  create_scaffolds.py  feature_extractors.py  match_syllables.py  models.py  stats.py  utils.py
scripts/python/syllable-match/syllable_match/labels/: __init__.py  duplications.py  errors.py  hesitations.py
scripts/python/syllable-match/syllable_match/matching/: __init__.py  errors.py  hesitations.py  match_syllables.py  matcher.py  utils.py
scripts/python/syllable-match/syllable_match/parsing/: __init__.py
scripts/python/syllable-match/syllable_match/resources/: __init__.py
scripts/python/syllable-match/tests/: test_utils.py
(+244 files in other folders)
