[project]
name = "hallmonitor"
version = "0.5.1"
description = ""
authors = [{ name = "Nolan Welch", email = "nolanwelch@outlook.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "packaging (>=24.2,<25.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
    "pytz (>=2025.1,<2026.0)",
    "six (>=1.17.0,<2.0.0)",
    "tzdata (>=2025.1,<2026.0)",
    "pytest-html (>=4.1.1,<5.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
mock = "^5.1.0"
pluggy = "^1.5.0"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
pre-commit = "^4.2.0"
setuptools = "^80.9.0"
