[project]
name = "syllable-analysis"
version = "0.4.0"
description = ""
authors = [
    {name = "Nolan Welch",email = "nolanwelch@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.2.5,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
